deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkapublisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkapublisher
  template:
    metadata:
      labels:
        app: kafkapublisher
    spec:
      volumes:
      - name: servicec-account-key
        secret:
          secretName: svcaccount-key 
      - name: kafkapublisher-volume
        configMap:
          name: kafkapublisher-config
      - name: service-account-credentials-volume
        secret:
          secretName: my-service-account-credentials
          items:
          - key: sa_json
            path: sa_credentials.json          
      containers:
      - name: kafkapublisher
        image: PUBLISHER_IMAGE
        volumeMounts:
        - name: kafkapublisher-volume
          mountPath: /app/config
        - name: service-account-credentials-volume
          mountPath: /app/secrets
        ports:
        - containerPort: 60001
        livenessProbe:
          httpGet:
            path: /producer/healthcheck
            port: 60001
        readinessProbe:
          httpGet:
            path: /producer/healthcheck
            port: 60001          
---
apiVersion: v1
kind: Service
metadata:
  name: kafkapublisher
spec:
  type: LoadBalancer
  selector:    
    app: kafkapublisher
  ports:
  - protocol: TCP
    port: 61000
    targetPort: 60001
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pub-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: kafkapublisher
            port:
              number: 61000
